<resources>
    <string name="app_name">Lily\'s App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_lilys_app">Welcome to Lily\'s App</string>
    <string name="welcome_picture">Welcome Picture</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="open_camera_app">Open Camera App</string>
    <string name="open_drow_ranger_wiki_page">Open Drow Ranger WIKI Page</string>
    <string name="open_crystal_maiden_wiki_page">Open Crystal Maiden WIKI Page</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="set_preference">Set Preference</string>
    <string name="get_preference">Get Preference</string>
    <string name="set_get_preferences">Set/Get Preferences</string>
    <string name="message_tv_text">Remeber what you saved last time?</string>
    <string name="title_activity_file_handling">Working with Files</string>
    <string name="create_view_files_string">Create/View Files</string>
    <string name="create_file_text">Create File</string>
    <string name="read_file_text">Read File</string>
    <string name="create_json_file">Create JSON File</string>
    <string name="read_json_file">Read JASON File</string>
    <string name="title_activity_database">Manage Databases</string>
    <string name="manage_databases">Manage Databases</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="insert">Insert</string>
    <string name="title_activity_items_list">List of Items</string>
    <string name="view_inserted_items">View Inserted Items</string>
    <string name="title_activity_suff_in_background">Do Suff In Background</string>
    <string name="do_stuff_in_the_background">Do Stuff in the Background</string>
    <string name="check_connection">Check Connection</string>
    <string name="title_activity_flower_details">Flower Details</string>
</resources>
