<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.lily.testapp.files.DatabaseActivity">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:id="@+id/itemNameTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemNameEditText"
        android:layout_alignBaseline="@+id/itemNameTextView"
        android:layout_toRightOf="@+id/itemNameTextView"
        android:layout_toEndOf="@+id/itemNameTextView" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_price"
        android:id="@+id/itemPriceTextView"
        android:layout_below="@+id/itemNameTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemPriceEditText"
        android:layout_alignBaseline="@+id/itemPriceTextView"
        android:layout_toRightOf="@+id/itemNameTextView"
        android:layout_toEndOf="@+id/itemNameTextView" />

    <Button
        android:id="@+id/insertButton"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemPriceTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/insert"
        android:onClick="insertItem" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insertButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/view_inserted_items"
        android:onClick="viewItems" />
</RelativeLayout>
